--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/mgtv.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬芒果猎狼者撸汽水签到
+cron "0 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_mc.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/mopo.png, enabled=true, tag=京东京喜牧场
 cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/hyzaw.png, enabled=true, tag=京东京享值PK
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东合肥旗舰店开业动物园版
 cron "0 22 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/ylsh.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=引力生活
