--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -154,6 +154,10 @@ picsew专业版 = type=http-response,script-path=https://raw.githubusercontent.c
 BoxJs = type=http-request,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js,pattern=^https?://boxjs.com,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js,pattern=^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
+滴滴出行 = type=cron,script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/zZPiglet/DiDi_new.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+滴滴喝水 = type=cron,script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/zZPiglet/DiDi_drink.js,cronexpr="40 8,20,9-20/2 * * *", timeout=3600, script-update-interval=43200, enable=true
+滴滴睡觉 = type=cron,script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/zZPiglet/DiDi_sleep.js,cronexpr="1 6,22 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 
 [Host]
 *testflight.apple.com = server:8.8.4.4
