--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,7 +1,9 @@
 # 奇心脚本合集
 # 祝高考学子，金榜题名!
 
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 0 0 0 1/1 ? " script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Del_jd_ck.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
+cron "20 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜牧场
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/mgtv.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd1561.png, enabled=true, tag=芒果猎狼者撸汽水签到
 cron "52 59 9 * * 0,5,6" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒支付宝抢消费券
 cron "25 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒签到收能量
 cron "0 22 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ylsh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ylsh.png, enabled=true, tag=引力生活
@@ -298,6 +300,7 @@ cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_car.js, i
 cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_car_exchange.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东汽车兑换
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/jd_price_detect/jd_price_detect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️京东价格提醒
 cron "15 17 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/backUp/xmSports.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/xmyd.png, tag=小米运动
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, img-url=https://qxzy.top/rules/QuantumultX/img/52pj.png, enabled=true, tag=吾爱破解
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, img-url=https://qxzy.top/rules/QuantumultX/img/iQIYI.png, enabled=true, tag=爱奇艺
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/KuaiKan-DailyBonus/KKMH.js, img-url=https://qxzy.top/rules/QuantumultX/img/KuaiKan.png, enabled=true, tag=快看漫画
