--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,4 +1,8 @@
+京东柠檬极速版砍价（需填变量） = type=cron,script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东京喜牧场0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxmc.js,cronexpr="20 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬省钱大赢家邀请码 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_sq.js,cronexpr="0,2 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬省钱大赢家 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_sqdyj.js,cronexpr="0,2 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
