--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # 祝高考学子，金榜题名!
 
 cron "* * * * 1/1 ?" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Del_jd_ck.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
+cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxnc.png, enabled=true, tag=京喜农场
 cron "20 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜牧场
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/mgtv.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd1561.png, enabled=true, tag=芒果猎狼者撸汽水签到
 cron "52 59 9 * * 0,5,6" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒支付宝抢消费券
