--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,6 +193,12 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东京喜牧场刷金币 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_mc_coin.js,cronexpr="0 10 * * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京喜88元红包0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxlhb.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东柠檬极速版砍价（需填变量） = type=cron,script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京喜牧场0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxmc.js,cronexpr="20 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
@@ -234,8 +240,6 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 京东新潮品牌狂欢执意版 = type=cron,script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_xckh.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东新潮品牌狂欢0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mcxhd.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东京喜领88元红包 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxlhb.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618开卡活动3 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard03.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
