--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -1,5 +1,5 @@
 # lxk0301 task gallery
-# https://gitee.com/lxk0301
+# see you latter
 
 cron "2 9 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_change.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东资产变动通知
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_home.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_bean_home.png, enabled=true, tag=领京豆额外奖励
