--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -207,8 +207,8 @@ cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quant
 cron "*/10 */2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jukan.js, img-url=https://qxzy.top/rules/QuantumultX/img/jukan.png, enabled=true, tag=聚看点
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/TT.js, img-url=https://qxzy.top/rules/QuantumultX/img/TT.png, enabled=true, tag=TT语音签到
 cron "1 1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_redPacket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东全民开红包
-cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jx_cfdtx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jx_cfdtx.png, enabled=true, tag=京喜财富岛提现
-cron "30 8,13,19 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_cfd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/aa4ddeca813fbf5c231dd4adaec68a7632cb292c/jx_cfdtx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jx_cfdtx.png, enabled=true, tag=京喜财富岛提现
+cron "30 8,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
 cron "11 1 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=false, tag=京东抽奖机
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, enabled=true, tag=⚠️京小超领蓝币
 cron "10 12,18 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东物流派件提醒
