--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,9 @@
+京东柠檬京喜工厂抢茅台（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_jxgc.js,cronexpr="58,59,0 18,19 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬拆红包（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_chb.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬推一推（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_tyt.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东京喜牧场刷金币 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_mc_coin.js,cronexpr="0 10 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
