--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -40,7 +40,7 @@
 
 京东省钱大赢家之翻翻乐隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_big_winner.js,cronexpr="20 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东星推官获取互助0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_xtg_help.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东星推官获取互助隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_xtg_help.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东新潮品牌狂欢隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_mcxhd.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -285,8 +285,6 @@
 京东京喜工厂收电力（需单抓ck） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jxcollect.js,cronexpr="*/30 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东极速版红包 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/wuzhi03/MyActions/main/jd_speed_redpocke.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东超市-大转盘 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js,cronexpr="3 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东删除优惠券 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_deleteCoupon.js,cronexpr="11 0 * * 1", timeout=3600, script-update-interval=43200, enable=true
 
