--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,10 +1,12 @@
+cron "0 0 * * *" script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia2.js, tag=京东柠檬极速版砍价2（需填变量）
+cron "1 0-23/1 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_SplitRedPacket.js, tag=京东天降红包
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/jdmn.js, tag=京东特物ZX签到Tom版
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xsmh.js, tag=京东柠檬618限时盲盒
 cron "15 0,6,13,19,21 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/ddo_pk.js, tag=京东京享值PK
-cron "30 7,19 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_limitBox.js, tag=京东限时盲盒温某某版
-cron "1 0-23/1 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_618redpacket.js, tag=京东新潮品牌狂欢翻翻乐
-cron "30 9,10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_mcxhd_brandcity.js, tag=京东新潮品牌狂欢
-cron "30 11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_superBrand.js, tag=京东特物ZX联想
+cron "30 7,19 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js, tag=京东限时盲盒温某某版
+cron "1 0-23/1 * 6 * " script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js, tag=京东新潮品牌狂欢翻翻乐
+cron "30 9,10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js, tag=京东新潮品牌狂欢
+cron "30 11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, tag=京东特物ZX联想
 cron "8 8 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJx88hongbao.js, tag=京东京喜88红包动物园版
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooSupershophf.js, tag=京东合肥旗舰店开业动物园版
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJointeam01.js, tag=京东GNC组队瓜分京豆
