--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,19 +193,23 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东柠檬极速版砍价2（需填变量） = type=cron,script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia2.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东天降红包 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_SplitRedPacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
 京东特物ZX签到Tom版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/jdmn.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬618限时盲盒 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xsmh.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东限时盲盒温某某版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+京东限时盲盒温某某版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
-京东新潮品牌狂欢翻翻乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+京东新潮品牌狂欢翻翻乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 * ", timeout=3600, script-update-interval=43200, enable=true
 
-京东新潮品牌狂欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_mcxhd_brandcity.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+京东新潮品牌狂欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
-京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
