--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,9 +1,18 @@
 # 奇心脚本合集
-# 祝高考学子，金榜题名!
+# https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "* * * * 1/1 ?" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_Delck.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
+cron "1 0-23/1 * 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_SplitRedPacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东天降红包
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_xsmh.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东618限时盲盒
+cron "15 0,6,13,19,21 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_jxzpk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东京享值PK
+cron "30 7,19 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东限时盲盒
+cron "1 0-23/1 * 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢翻翻乐
+cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东新潮品牌狂欢
+cron "30 11 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东特物ZX联想
 cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxnc.png, enabled=true, tag=京喜农场
 cron "20 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜牧场
+cron "8 8 * 6 *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Jx88hongbao.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜领88元红包2
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Supershophf.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=合肥旗舰店开业
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/mgtv.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd1561.png, enabled=true, tag=芒果猎狼者撸汽水签到
 cron "52 59 9 * * 0,5,6" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒支付宝抢消费券
 cron "25 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒签到收能量
@@ -15,7 +24,6 @@ cron "10 10 1-18 6 *" script-path=https://raw.githubusercontent.com/zooPanda/zoo
 cron "0 1 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东城城分现金互助
 cron "0  9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_618jc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=手机竞猜
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxlhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜领88元红包
-cron "15 0,6,13,19,21 * * *" script-path=https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mcxhd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢
 cron "1 */1 1-30 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=大赢家翻翻乐
 cron "1 20 1-18 6 *" script-path=https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东618主会场红包雨
