--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -9,8 +9,9 @@ cron "30 7,19 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/sc
 cron "1 0-23/1 * 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢翻翻乐
 cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东新潮品牌狂欢
 cron "30 11 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东特物ZX联想
-cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxnc.png, enabled=true, tag=京喜农场
-cron "20 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜牧场
+cron "1 7,12,19 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_beauty.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=美丽研究院
+cron "0 9,12,18 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxnc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜农场
+cron "20 0-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜牧场
 cron "8 8 * 6 *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Jx88hongbao.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜领88元红包2
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Supershophf.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=合肥旗舰店开业
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/mgtv.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd1561.png, enabled=true, tag=芒果猎狼者撸汽水签到
@@ -18,7 +19,7 @@ cron "52 59 9 * * 0,5,6" script-path=https://raw.githubusercontent.com/zZPiglet/
 cron "25 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒签到收能量
 cron "0 22 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ylsh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ylsh.png, enabled=true, tag=引力生活
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Jointeam01.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东GNC组队瓜分京豆
-cron "20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=省钱大赢家之翻翻乐
+cron "20 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_big_winner.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=省钱大赢家之翻翻乐
 cron "5,35 * * 6 *" script-path=https://raw.githubusercontent.com/jiulan/platypus/main/scripts/jd_ffl.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东翻翻乐提现
 cron "10 10 1-18 6 *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=限时盲盒
 cron "0 1 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东城城分现金互助
@@ -216,7 +217,7 @@ cron "*/10 */2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jukan.js
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/TT.js, img-url=https://qxzy.top/rules/QuantumultX/img/TT.png, enabled=true, tag=TT语音签到
 cron "1 1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_redPacket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东全民开红包
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/aa4ddeca813fbf5c231dd4adaec68a7632cb292c/jx_cfdtx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jx_cfdtx.png, enabled=true, tag=京喜财富岛提现
-cron "30 8,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
+cron "30 8,13,19 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_cfd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
 cron "11 1 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=false, tag=京东抽奖机
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, enabled=true, tag=⚠️京小超领蓝币
 cron "10 12,18 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东物流派件提醒
