--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -15,6 +15,12 @@ cron "20 0-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301
 cron "8 8 * 6 *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Jx88hongbao.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜领88元红包2
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Supershophf.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=合肥旗舰店开业
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/mgtv.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd1561.png, enabled=true, tag=芒果猎狼者撸汽水签到
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/jsm.js, img-url=https://qxzy.top/rules/QuantumultX/img/jsm.png, enabled=true, tag=健身猫（安卓）
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hbdd.js, img-url=https://qxzy.top/rules/QuantumultX/img/hbdd.png, enabled=true, tag=红包多多（安卓）
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/cgsd.js, img-url=https://qxzy.top/rules/QuantumultX/img/cgsd.png, enabled=true, tag=草根时代（安卓）
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zdd.js, img-url=https://qxzy.top/rules/QuantumultX/img/zdd.png, enabled=true, tag=赚多多（安卓）
+cron "0 0/30 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xbzs.js, img-url=https://qxzy.top/rules/QuantumultX/img/wgc.png, enabled=true, tag=小宝种树
+cron "5 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ecwk.js, img-url=https://qxzy.top/rules/QuantumultX/img/ecwk.png, enabled=true, tag=EC挖矿
 cron "52 59 9 * * 0,5,6" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒支付宝抢消费券
 cron "25 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒签到收能量
 cron "0 22 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ylsh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ylsh.png, enabled=true, tag=引力生活
@@ -71,7 +77,7 @@ cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/
 cron "0 30 7,10 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=https://qxzy.top/rules/QuantumultX/img/gdbs.png, enabled=true, tag=咕咚步数红包
 cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️半点京豆雨
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️整点京豆雨
-cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=云云赚呗
 cron "0-59 9-14 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wdwhd.js, img-url=https://ae01.alicdn.com/kf/Uc5a0618d6a404079af9216e1012e35efs.jpg, enabled=true, tag=我的网红店
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Uc740cff52d1c48c49223a8a7378a54d1q.jpg, enabled=true, tag=动物研究院
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/xpread.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱
