--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,6 +193,10 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东柠檬特物ZX雅培 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxyp.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬赚金币（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zjb.js,cronexpr="0 5 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东柠檬极速版砍价2（需填变量） = type=cron,script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia2.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东天降红包 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_SplitRedPacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
@@ -201,7 +205,7 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 京东柠檬618限时盲盒 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xsmh.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东限时盲盒温某某版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
