--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,6 @@
+cron "0-59/30 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooCollect.js, tag=京东动物联萌收集金币star版
+cron "10 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooMap.js, tag=京东动物联萌只做店铺任务star版
+cron "36 0,6-23/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zoo.js, tag=京东动物联萌star版
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxyp.js, tag=京东柠檬特物ZX雅培
 cron "0 5 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zjb.js, tag=京东柠檬赚金币（需填变量）
 cron "0 0 * * *" script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia2.js, tag=京东柠檬极速版砍价2（需填变量）
