--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,7 @@
+cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js, tag=京东价格保护
+cron "0 12 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/bsj.js, tag=保时捷(小程序)
+cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxrby.js, tag=京东柠檬特物ZX润百颜
+cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_hsb.js, tag=京东柠檬特物ZX护舒宝
 cron "0-59/30 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooCollect.js, tag=京东动物联萌收集金币star版
 cron "10 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooMap.js, tag=京东动物联萌只做店铺任务star版
 cron "36 0,6-23/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zoo.js, tag=京东动物联萌star版
