--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,9 @@
+京东价格保护 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬特物ZX润百颜 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxrby.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬特物ZX护舒宝 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_hsb.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东动物联萌收集金币star版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooCollect.js,cronexpr="0-59/30 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东动物联萌只做店铺任务star版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/star261/jd/main/scripts/jd_zooMap.js,cronexpr="10 10 * * *", timeout=3600, script-update-interval=43200, enable=true
