--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0,9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/baitiao.png, enabled=true, tag=京东白条
 cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/ZCY01/img/master/pricev1.png, enabled=true, tag=京东价格保护
 cron "0 12 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/bsj.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=保时捷(小程序)
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxrby.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东柠檬特物ZX润百颜
