--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,6 +193,8 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东白条 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js,cronexpr="0 0,9 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东价格保护 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬特物ZX润百颜 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxrby.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
