--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard10.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东618开卡活动10
+cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard09.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东618开卡活动9
+cron "30 */1 * * *" script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia3.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东柠檬极速版砍价3（需填变量）
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxjoy.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东柠檬特物ZXJOY&DOGA
 cron "0 23 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/myxp.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=美音星品
 cron "8 8 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东京喜88红包动物园版
