--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,9 @@
+京东618开卡活动10 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard10.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动9 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard09.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬极速版砍价3（需填变量） = type=cron,script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia3.js,cronexpr="30 */1 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东柠檬特物ZXJOY&DOGA = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxjoy.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
