--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,6 +193,10 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬品牌狂欢日 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ppkhr.js,cronexpr="30 */1 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东618开卡活动10 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard10.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618开卡活动9 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard09.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
@@ -226,8 +230,6 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东宝洁消消乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooBaojiexiaoxiaole.js,cronexpr="18 9 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
-京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东白条 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js,cronexpr="0 0,9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
