--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 8-14/1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/jrkuaixun.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/wen.png, enabled=true, tag=10s阅读
+cron "*/12 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/DKDVIDEO/dkdvideo.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/jiejie.png, enabled=true, tag=多看点姐姐修复版
 cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/hzh/hzh.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/hzh.png, enabled=true, tag=华住会签到
 cron "0 23 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/ppz.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=拼拼猪
 cron "15 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooElecsport.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东东东电竞经理
